feat: 补充 README 并修改 package.json 文件

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "localhost": {
         "title": "本地",
         "env": {
+          "UNI_PLATFORM": "mp-weixin",
           "BASE_URL": "http://localhost:3000"
         }
       },
