--- a/package.json
+++ b/package.json
@@ -7,16 +7,14 @@
         "title": "本地",
         "env": {
           "UNI_PLATFORM": "mp-weixin",
-          "BASE_URL": "http://localhost:3000",
-          "STATIC_BASE_URL": "http://localhost:3000"
+          "BASE_URL": "http://localhost:3000"
         }
       },
       "dev": {
         "title": "测试环境",
         "env": {
           "UNI_PLATFORM": "mp-weixin",
-          "BASE_URL": "http://192.168.0.102:3000",
-          "STATIC_BASE_URL": "http://192.168.0.102:3000"
+          "BASE_URL": "http://192.168.0.103:3000"
         }
       }
     }
