feat: 更换 mime 包为 mime

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "add": "^2.0.6",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.13",
-    "mime-types": "^2.1.35",
+    "mime": "^4.0.6",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
     "uni-mini-router": "^0.1.6",
@@ -86,7 +86,6 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4030620241128001",
     "@dcloudio/uni-stacktracey": "3.0.0-4030620241128001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
-    "@types/mime-types": "^2.1.4",
     "@types/node": "^22.10.7",
     "@types/wechat-miniprogram": "^3.4.8",
     "@uni-helper/uni-app-types": "^1.0.0-alpha.6",
