--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "env": {
           "UNI_PLATFORM": "mp-weixin",
           "BASE_URL": "http://localhost:3000",
-          "Official_USER_ID":39
+          "Official_USER_ID": 39
         }
       },
       "dev": {
@@ -76,6 +76,7 @@
     "mime": "^4.0.6",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "spark-md5": "^3.0.2",
     "uni-mini-router": "^0.1.6",
     "uni-parse-pages": "^0.0.1",
     "uview-plus": "^3.3.62",
@@ -89,6 +90,7 @@
     "@dcloudio/uni-stacktracey": "3.0.0-4030620241128001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
     "@types/node": "^22.10.7",
+    "@types/spark-md5": "^3.0.5",
     "@types/wechat-miniprogram": "^3.4.8",
     "@uni-helper/uni-app-types": "^1.0.0-alpha.6",
     "@vue/runtime-core": "^3.4.21",
